--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,35 @@
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext.kotlin_version = '1.3.31'
     repositories {
-        mavenCentral()
+        jcenter()
+        maven { url "http://jcenter.bintray.com"}
     }
     dependencies {
-        classpath  "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        testCompile 'junit:junit:4.12'
-        testCompile 'org.mockito:mockito-core:1.10.19'
-        testCompile 'org.hamcrest:hamcrest-library:1.3'
+        compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+apply plugin: 'java'
+apply plugin: 'kotlin'
+sourceCompatibility = 1.8
+repositories {
+    mavenCentral()
+    jcenter{ url "http://jcenter.bintray.com/" }
+    maven { url "https://jitpack.io" }
+}
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'cglib', name: 'cglib', version: '3.2.10'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
